[gd_scene format=3 uid="uid://ojcsaaew2nt2"]

[ext_resource type="PackedScene" uid="uid://cb083mnw8oavl" path="res://New/Util/Components/color_base.tscn" id="1_mm70g"]
[ext_resource type="Script" uid="uid://7vjqo2scp3kt" path="res://New/MiniGames/LongSimonSays/long_simon_says.gd" id="1_pa8el"]

[node name="LongSimonSays" type="Node2D" unique_id=2147395886 groups=["Mini_games"]]
script = ExtResource("1_pa8el")

[node name="ColorRect" type="ColorRect" parent="." unique_id=252148636]
offset_right = 1168.0
offset_bottom = 672.0
mouse_filter = 2
color = Color(0.74509805, 0.80784315, 1, 1)

[node name="SimonColor" parent="." unique_id=762940441 instance=ExtResource("1_mm70g")]
visible = false
position = Vector2(576, 296)
clickable = false

[node name="ColorOptions" type="Node2D" parent="." unique_id=1130447427]

[node name="ShowColor" type="Timer" parent="." unique_id=499070022]
one_shot = true

[node name="BetweenColors" type="Timer" parent="." unique_id=1257098316]
wait_time = 0.5
one_shot = true

[node name="GuessTimer" type="Timer" parent="." unique_id=2130224031]
wait_time = 3.5
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="." unique_id=514645932]
offset_right = 48.0
offset_bottom = 672.0
fill_mode = 3
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1771831981]
layer = 3
follow_viewport_enabled = true

[node name="ColorContainer" type="GridContainer" parent="CanvasLayer" unique_id=1485575320]
anchors_preset = -1
anchor_left = 0.5002222
anchor_top = 0.46896297
anchor_right = 0.5002222
anchor_bottom = 0.46896297
offset_left = -432.25598
offset_top = -231.88803
offset_right = 671.744
offset_bottom = 432.112
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/h_separation = 300
theme_override_constants/v_separation = 200
columns = 4
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="GuessTimer" to="." method="_on_guess_timer_timeout"]
